--- a/webapi/webapi.csproj
+++ b/webapi/webapi.csproj
@@ -11,6 +11,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+	  <Content Include="Images\*">
+		  <CopyToPublishDirectory>always</CopyToPublishDirectory>
+	  </Content>
   </ItemGroup>
 
 </Project>
